[package]
name = "rust"
authors = ["Jannik Schmied <jannik.schmied@pm.me"]
keywords = ["docker", "can", "automotive"]
version = "1.0.0"
edition = "2021"

[dependencies]
docker-api = { version  = "0.9.2", features = ["tls"] }
env_logger = "0.9.0"
futures = "0.3.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "3.0.0-beta.5", features = ["derive"] }
pretty_assertions = "1.2.1"